install/iptables/iptables
# Generated by iptables-save v1.4.7 on Sun Oct 30 21:24:21 2016
#*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
#-A POSTROUTING -m limit --limit 1/sec -j LOG --log-prefix "IPTABLES-POSTR-CHAIN|" --log-level 7
# Uncomment for masquerading
#-A POSTROUTING -s VMNET_OR_DOCKERNET -o eth2 -j MASQUERADE
#-A POSTROUTING -m limit --limit 1/sec -j LOG --log-prefix "IPTABLES-POSTR-DROPPED|" --log-level 7
#-A POSTROUTING -j DROP
#COMMIT
# Completed on Sun Oct 30 21:24:21 2016
# Generated by iptables-save v1.4.7 on Sun Oct 30 21:24:21 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [11502:1526864]
-A INPUT -m limit --limit 1/sec -j LOG --log-prefix "IPTABLES-INPUT-CHAIN|" --log-level 7 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 2122 -j ACCEPT 
-A INPUT -s SANDNET -p tcp -m state --state NEW -m tcp --dport 2042 -j ACCEPT 
-A INPUT -m limit --limit 1/sec -j LOG --log-prefix "IPTABLES-INPUT-CHAIN-DROPPED|" --log-level 7
-A INPUT -j DROP 
-A FORWARD -m limit --limit 1/sec -j LOG --log-prefix "IPTABLES-FORWARD-CHAIN|" --log-level 7
# Uncomment this if you want your sandnet to be allowed to go to the internet (updates from CLEAN state, etc.)
#-A FORWARD -s SANDNET -j ACCEPT
#-A FORWARD -d SANDNET -j ACCEPT
-A FORWARD -m limit --limit 1/sec -j LOG --log-prefix "IPTABLES-FORWARD-DROPPED|" --log-level 7
-A FORWARD -j DROP 
COMMIT
# Completed on Sun Oct 30 21:24:21 2016
